# css_training

./: pyproject.toml
test_project/test_project/: settings.py  urls.py
test_project/timeline/: urls.py  views.py
test_project/timeline/static/css/: timeline.css
test_project/timeline/templates/timeline/: timeline_index.html
test_project/timeline_2/: apps.py  urls.py  views.py
test_project/timeline_2/static/css/: timeline_2.css
test_project/timeline_2/templates/timeline_2/: timeline_2_index.html
