[tool.poetry]
name = "test-project"
version = "0.0.1"
description = "It's just test project (for training css)"
authors = ["Pugavkomm <slavapugavko2@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
